# MarkovsHousehold

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: simple-ci.yml
doc/puml/: flowChartLegacy.puml
docs/: Input.md  conf.py  index.rst
docs/developer/: developer.md
docs/puml/: dataModel.puml  data_model.puml  monte_carlo_simulation.puml  (+2 more)
input/: Kopie von Eingabeoberflaeche_Haushalte.xlsm  average_hh.csv  by_type.csv  config.yaml
legacy/: Ausfuehrungsdatei.m  Eingabeoberflaeche_Einlesen.m  Eingabeoberflaeche_Haushalte.xlsm  Eingabeoberflaeche_Lastverschiebung.xlsm  Eingabeoberflaeche_Lastverschiebung_Funktion.xlsm  Eingabeoberflaeche_Wahrscheinlichkeit_Leistung.xlsm  Eingabeoberflaeche_Wahrscheinlichkeit_Leistung_Jahr.xlsm  Eingabeoberflaeche_Wahrscheinlichkeit_Leistung_Lastverschiebung.xlsm  Eingabeoberflaeche_Wahrscheinlichkeit_Leistung_Lastverschiebung_Jahr.xlsx  Fuzzy_Preisfunktion_variabel.fis  Hauptprogramm.m  Lastverlaeufe_Darstellung.xlsx  Lastverlaeufe_Geraete.xlsx  Lastverlaeufe_Geraete_Monte.xlsm  Menue_Auswahl_Plot.m  Menue_Auswahl_Plot_nach.m  MonteCarlo.m  Monte_Carlo_Excel_Uebertragung.m  P_berechnet.xlsx  P_berechnet_Jahr.xlsx  Parameterberechnung_nach.m  Parameterberechnung_nach_Jahr.m  Plotten.m  Plotten_nach.m  Simulation.m  Simulation_Monte_Carlo.m  Simulation_Monte_Carlo_nach.m  Simulation_Monte_Carlo_nach_Jahr.m  Simulation_nach.m  VariablenDefinieren.m  VorbereitungMonteCarlo.m  Wahrscheinlichkeiten_Einlesen.m  Wahrscheinlichkeiten_Lastverschiebung.m  Wahrscheinlichkeiten_Lastverschiebung_Jahr.m
markovs_household/: load_profile.ipynb  main.py
scripts/: plantuml.sh
(+70 files in other folders)
