[tool.poetry]
name = "markovshousehold"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "~3.10.4"
PyYAML = "~6.0"
pandas = "~2.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "~3.3.3"
flake8-black = "~0.3.4"
Sphinx = "~6.2.1"
myst-parser = "~2.0.0"
sphinx-rtd-theme = "~1.3.0"
pytest = "~7.4.0"
black = "~23.7.0"
flake8 = "~6.1.0"
isort = "~5.12.0"
flake8-isort = "~6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"