[tool.poetry]
name = "markovshousehold"
version = "0.1.0"
description = ""
authors = ["ie3"]

[tool.poetry.dependencies]
python = "~3.11.6"
PyYAML = "~6.0"
pandas = "~2.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "~3.5.0"
flake8-black = "~0.3.4"
Sphinx = "~7.2.6"
myst-parser = "~2.0.0"
sphinx-rtd-theme = "~1.3.0"
pytest = "~8.2.1"
black = "~23.10.1"
flake8 = "~7.0.0"
isort = "~5.12.0"
flake8-isort = "~6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"