[tool.poetry]
name = "markovshousehold"
version = "0.1.0"
description = ""
authors = ["ie3"]

[tool.poetry.dependencies]
python = "~3.11.6"
PyYAML = "~6.0"
pandas = "~2.2.2"

[tool.poetry.dev-dependencies]
pre-commit = "~3.7.1"
flake8-black = "~0.3.4"
Sphinx = "~7.3.7"
myst-parser = "~3.0.1"
sphinx-rtd-theme = "~2.0.0"
pytest = "~8.2.2"
black = "~24.4.2"
flake8 = "~7.0.0"
isort = "~5.13.2"
flake8-isort = "~6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"